--- a/package.json
+++ b/package.json
@@ -55,7 +55,10 @@
                 {
                   "html": "./src/index.html",
                   "js": "./src/renderer.ts",
-                  "name": "main_window"
+                  "name": "main_window",
+                  "preload": {
+                    "js": "./src/preload.ts"
+                  }
                 }
               ]
             }
@@ -83,6 +86,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/winreg": "^1.2.31",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.0",
@@ -103,6 +107,7 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@node-steam/vdf": "^2.2.0",
     "electron-prebuilt-compile": "^8.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
