--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
       "*": ["node_modules/*"]
     },
     "jsx": "react"
+    // "typeRoots": ["node_modules/@types", "./src"]
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "files": ["src/index.d.ts"]
 }
