--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "esModuleInterop": true,
     "noImplicitAny": true,
     "sourceMap": true,
+    "target": "ES6",
     "baseUrl": ".",
     "outDir": "dist",
     "moduleResolution": "node",
