--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wh3mm",
   "productName": "wh3mm",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "description": "WH3 Mod Manager",
   "main": ".webpack/main",
   "scripts": {
@@ -118,6 +118,9 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^1.0.6",
     "@node-steam/vdf": "^2.2.0",
     "@reduxjs/toolkit": "^1.8.2",
