--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wh3mm",
   "productName": "wh3mm",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "WH3 Mod Manager",
   "main": ".webpack/main",
   "scripts": {
@@ -132,6 +132,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.0.27",
+    "gh-release-fetch": "^3.0.2",
     "nightmare": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
