--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wh3mm",
   "productName": "wh3mm",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "WH3 Mod Manager",
   "main": ".webpack/main",
   "scripts": {
@@ -138,6 +138,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-select": "^5.3.2",
+    "semver": "^7.3.7",
     "winreg": "^1.2.4"
   }
 }
