--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@floating-ui/react-dom": "^1.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -133,7 +134,6 @@
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.0.27",
     "gh-release-fetch": "^3.0.2",
-    "nightmare": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
