--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "gh-release-fetch": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-joyride": "^2.5.0",
     "react-redux": "^8.0.2",
     "react-select": "^5.3.2",
     "semver": "^7.3.7",
