--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wh3mm",
   "productName": "wh3mm",
-  "version": "1.11.0",
+  "version": "1.12.0",
   "description": "WH3 Mod Manager",
   "main": ".webpack/main",
   "scripts": {
@@ -132,6 +132,7 @@
     "electron-is-dev": "^2.0.0",
     "electron-prebuilt-compile": "^8.2.0",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-window-state": "^5.0.3",
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.0.27",
     "gh-release-fetch": "^3.0.2",
