check for movie packs

--- a/package.json
+++ b/package.json
@@ -125,6 +125,8 @@
     "@heroicons/react": "^1.0.6",
     "@node-steam/vdf": "^2.2.0",
     "@reduxjs/toolkit": "^1.8.2",
+    "@types/binary-file": "^0.2.0",
+    "binary-file": "^0.2.3",
     "chokidar": "^3.5.3",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
