--- a/package.json
+++ b/package.json
@@ -125,6 +125,8 @@
     "@heroicons/react": "^1.0.6",
     "@node-steam/vdf": "^2.2.0",
     "@reduxjs/toolkit": "^1.8.2",
+    "@types/binary-file": "^0.2.0",
+    "binary-file": "^0.2.3",
     "chokidar": "^3.5.3",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
@@ -135,6 +137,7 @@
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.0.27",
     "gh-release-fetch": "^3.0.2",
+    "just-clone": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-joyride": "^2.5.0",
