--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wh3mm",
   "productName": "wh3mm",
-  "version": "1.15.0",
+  "version": "1.16.0",
   "description": "WH3 Mod Manager",
   "main": ".webpack/main",
   "scripts": {
@@ -130,6 +130,7 @@
     "chokidar": "^3.5.3",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.3.6",
     "electron-fetch": "^1.7.4",
     "electron-is-dev": "^2.0.0",
     "electron-prebuilt-compile": "^8.2.0",
