--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "electron-prebuilt-compile": "^8.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-window-state": "^5.0.3",
+    "fast-deep-equal": "^3.1.3",
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.0.27",
     "gh-release-fetch": "^3.0.2",
@@ -146,6 +147,7 @@
     "react-redux": "^8.0.2",
     "react-select": "^5.3.2",
     "semver": "^7.3.7",
+    "steamworks.js": "^0.0.21",
     "winreg": "^1.2.4"
   }
 }
