--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "wh3mm",
   "productName": "wh3mm",
-  "version": "1.19.0",
+  "version": "1.20.0",
   "description": "WH3 Mod Manager",
   "main": ".webpack/main",
   "scripts": {
-    "start": "tsc ./src/sub.ts ./src/readPacksWorker.ts --outDir ./temp && electron-forge start",
+    "start": "tsc ./src/sub.ts ./src/readPacksWorker.ts --resolveJsonModule --outDir ./temp && electron-forge start",
     "package": "electron-forge package",
-    "make": "tsc ./src/sub.ts ./src/readPacksWorker.ts --outDir ./temp && electron-forge make",
+    "make": "tsc ./src/sub.ts ./src/readPacksWorker.ts --resolveJsonModule --outDir ./temp && electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
     "storybook": "start-storybook -p 6006",
