--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@types/fs-extra": "^9.0.13",
     "@types/nightmare": "^2.10.6",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
@@ -139,10 +140,12 @@
     "fast-deep-equal": "^3.1.3",
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.0.27",
+    "fs-extra": "^10.1.0",
     "gh-release-fetch": "^3.0.2",
     "just-clone": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-joyride": "^2.5.0",
     "react-redux": "^8.0.2",
     "react-select": "^5.3.2",
