--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "date-fns-tz": "^1.3.6",
     "electron-fetch": "^1.7.4",
     "electron-is-dev": "^2.0.0",
+    "electron-log": "^4.4.8",
     "electron-prebuilt-compile": "^8.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-window-state": "^5.0.3",
