--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@swc/core": "^1.3.3",
     "@types/fs-extra": "^9.0.13",
     "@types/nightmare": "^2.10.6",
     "@types/react": "^18.0.14",
@@ -114,6 +115,7 @@
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
     "style-loader": "^3.3.1",
+    "swc-loader": "^0.2.3",
     "tailwindcss": "^3.1.3",
     "ts-loader": "^9.3.0",
     "typescript": "~4.5.4"
