--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
     "style-loader": "^3.3.1",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.1.3",
     "ts-loader": "^9.3.0",
     "typescript": "~4.5.4"
