--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "fs-extra": "^10.1.0",
     "gh-release-fetch": "^3.0.2",
     "just-clone": "^6.1.1",
+    "just-debounce-it": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
