--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
+    "react-icons": "^4.6.0",
     "react-joyride": "^2.5.0",
     "react-redux": "^8.0.2",
     "react-select": "^5.3.2",
