--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "just-clone": "^6.1.1",
     "just-debounce-it": "^3.1.1",
     "path-browserify": "^1.0.1",
+    "re-resizable": "^6.9.9",
     "react": "^18.2.0",
     "react-accessible-treeview": "^2.3.4",
     "react-dom": "^18.2.0",
