--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wh3mm",
   "productName": "wh3mm",
-  "version": "1.34.3",
+  "version": "1.34.4",
   "description": "WH3 Mod Manager",
   "main": ".webpack/main",
   "scripts": {
@@ -168,6 +168,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-select": "^5.6.0",
+    "react-tabs": "^6.0.1",
     "semver": "^7.3.8",
     "steamworks.js": "^0.0.25",
     "winreg": "^1.2.4"
