--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "license": "MIT",
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "icon": "./src/assets/Modmanager.ico"
+      },
       "publishers": [
         {
           "name": "@electron-forge/publisher-github",
