add app icon to topbar

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "config": {
     "forge": {
       "packagerConfig": {
-        "icon": "./src/assets/Modmanager.ico"
+        "icon": "./src/assets/modmanager.ico"
       },
       "publishers": [
         {
