--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack5": "^6.5.9",
     "@storybook/jest": "^0.0.10",
     "@storybook/manager-webpack5": "^6.5.9",
@@ -124,6 +125,7 @@
     "node-loader": "^2.0.0",
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.0",
+    "random-words": "^1.3.0",
     "style-loader": "^3.3.1",
     "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.2",
@@ -132,7 +134,7 @@
   },
   "dependencies": {
     "@floating-ui/react-dom": "^1.0.0",
-    "@floating-ui/react-dom-interactions": "0.9.1",
+    "@floating-ui/react-dom-interactions": "^0.13.3",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -177,5 +179,6 @@
     "semver": "^7.3.8",
     "steamworks.js": "^0.0.25",
     "winreg": "^1.2.4"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
