--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wh3mm",
   "productName": "wh3mm",
-  "version": "1.38.0",
+  "version": "1.38.1",
   "description": "WH3 Mod Manager",
   "main": ".webpack/main",
   "scripts": {
@@ -156,6 +156,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "electron-window-state": "^5.0.3",
     "fast-deep-equal": "^3.1.3",
+    "fast-xml-parser": "^4.2.7",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.4",
     "fs-extra": "^10.1.0",
@@ -177,7 +178,7 @@
     "react-select": "^5.6.0",
     "react-tabs": "^6.0.1",
     "semver": "^7.3.8",
-    "steamworks.js": "^0.0.25",
+    "steamworks.js": "^0.3.0",
     "winreg": "^1.2.4"
   },
   "packageManager": "yarn@1.22.19"
