--- a/package.json
+++ b/package.json
@@ -164,6 +164,7 @@
     "handsontable": "^12.3.3",
     "i18next": "^23.4.6",
     "i18next-fs-backend": "^2.1.5",
+    "iso-639-1": "^3.1.0",
     "just-clone": "^6.1.1",
     "just-debounce-it": "^3.1.1",
     "path-browserify": "^1.0.1",
