--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@types/clone-deep": "^4.0.3",
     "@types/fs-extra": "^9.0.13",
     "@types/nightmare": "^2.10.6",
     "@types/object-hash": "^3.0.2",
@@ -147,6 +148,7 @@
     "binary-file": "^0.2.3",
     "chokidar": "^3.5.3",
     "classnames": "^2.3.2",
+    "clone-deep": "^4.0.1",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^1.3.7",
     "electron-fetch": "^1.9.1",
