--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wh3mm",
   "productName": "wh3mm",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "WH3 Mod Manager",
   "main": ".webpack/main",
   "scripts": {
@@ -142,6 +142,8 @@
     "@handsontable/react": "^12.3.3",
     "@heroicons/react": "^2.0.13",
     "@node-steam/vdf": "^2.2.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@silevis/reactgrid": "^4.0.4",
     "@types/binary-file": "^0.2.0",
@@ -185,6 +187,8 @@
     "react-tabs": "^6.0.1",
     "semver": "^7.3.8",
     "steamworks.js": "^0.3.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "winreg": "^1.2.4"
   },
   "packageManager": "yarn@1.22.19"
