--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "@silevis/reactgrid": "^4.0.4",
     "@types/binary-file": "^0.2.0",
     "binary-file": "^0.2.3",
+    "binary-search": "^1.3.6",
     "cheerio": "^1.0.0-rc.12",
     "chokidar": "^3.5.3",
     "classnames": "^2.3.2",
