--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "date-fns": "^2.29.3",
     "date-fns-tz": "^1.3.7",
     "deep-object-diff": "^1.1.9",
+    "electron-extension-installer": "^1.2.0",
     "electron-fetch": "^1.9.1",
     "electron-is-dev": "^2.0.0",
     "electron-log": "^4.4.8",
