--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wh3mm",
   "productName": "wh3mm",
-  "version": "2.3.2",
+  "version": "2.4.0",
   "description": "WH3 Mod Manager",
   "main": ".webpack/main",
   "scripts": {
@@ -147,6 +147,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "@silevis/reactgrid": "^4.0.4",
     "@types/binary-file": "^0.2.0",
+    "@types/object.groupby": "^1.0.4",
     "binary-file": "^0.2.3",
     "binary-search": "^1.3.6",
     "cheerio": "^1.0.0-rc.12",
@@ -176,6 +177,7 @@
     "iso-639-1": "^3.1.0",
     "just-clone": "^6.1.1",
     "just-debounce-it": "^3.1.1",
+    "object.groupby": "^1.0.3",
     "path-browserify": "^1.0.1",
     "ps-list": "^8.1.1",
     "re-resizable": "^6.9.9",
