--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "typescript": "~4.8.4"
   },
   "dependencies": {
+    "@ai-zen/steamworks.js": "^0.3.6",
     "@floating-ui/react-dom": "^1.0.0",
     "@floating-ui/react-dom-interactions": "^0.13.3",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
@@ -192,7 +193,6 @@
     "react-select": "^5.6.0",
     "react-tabs": "^6.0.1",
     "semver": "^7.3.8",
-    "steamworks.js": "^0.3.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "winreg": "^1.2.4"
