--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/clone-deep": "^4.0.3",
     "@types/fs-extra": "^9.0.13",
+    "@types/luaparse": "^0.2.12",
     "@types/nightmare": "^2.10.6",
     "@types/object-hash": "^3.0.2",
     "@types/react": "^18.0.14",
@@ -178,6 +179,7 @@
     "iso-639-1": "^3.1.0",
     "just-clone": "^6.1.1",
     "just-debounce-it": "^3.1.1",
+    "luaparse": "^0.3.1",
     "object.groupby": "^1.0.3",
     "path-browserify": "^1.0.1",
     "ps-list": "^8.1.1",
