--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "flowbite-react": "^0.3.4",
     "fs-extra": "^10.1.0",
     "gh-release-fetch": "^3.0.2",
+    "glob": "^10.3.12",
     "handsontable": "^12.3.3",
     "i18next": "^23.4.6",
     "i18next-fs-backend": "^2.1.5",
