--- a/package.json
+++ b/package.json
@@ -77,6 +77,14 @@
                   "preload": {
                     "js": "./src/preload.ts"
                   }
+                },
+                {
+                  "html": "./src/viewer/viewerIndex.html",
+                  "js": "./src/renderer.ts",
+                  "name": "skills",
+                  "preload": {
+                    "js": "./src/preload.ts"
+                  }
                 }
               ]
             }
@@ -136,6 +144,7 @@
   },
   "dependencies": {
     "@ai-zen/steamworks.js": "^0.3.6",
+    "@dagrejs/dagre": "^1.1.3",
     "@floating-ui/react-dom": "^1.0.0",
     "@floating-ui/react-dom-interactions": "^0.13.3",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
@@ -150,6 +159,7 @@
     "@silevis/reactgrid": "^4.0.4",
     "@types/binary-file": "^0.2.0",
     "@types/object.groupby": "^1.0.4",
+    "@xyflow/react": "^12.0.1",
     "binary-file": "^0.2.3",
     "binary-search": "^1.3.6",
     "cheerio": "^1.0.0-rc.12",
@@ -181,6 +191,7 @@
     "just-clone": "^6.1.1",
     "just-debounce-it": "^3.1.1",
     "luaparse": "^0.3.1",
+    "node-fetch": "^3.3.2",
     "object.groupby": "^1.0.3",
     "path-browserify": "^1.0.1",
     "ps-list": "^8.1.1",
@@ -195,9 +206,11 @@
     "react-router-dom": "^6.10.0",
     "react-select": "^5.6.0",
     "react-tabs": "^6.0.1",
+    "reactflow": "^11.11.4",
     "semver": "^7.3.8",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "ts-pattern": "^5.2.0",
     "winreg": "^1.2.4"
   },
   "packageManager": "yarn@1.22.19"
