--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "make": "tsc ./src/sub.ts ./src/readPacksWorker.ts --skipLibCheck --resolveJsonModule --outDir ./temp && electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "echo 'storybook currently broken, storybook dev -p 6006'",
+    "build-storybook": "storybook build"
   },
   "keywords": [],
   "author": {
@@ -95,58 +95,70 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
-    "@electron-forge/cli": "^6.0.0-beta.64",
-    "@electron-forge/maker-deb": "^6.0.0-beta.64",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.64",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.64",
-    "@electron-forge/maker-zip": "^6.0.0-beta.64",
-    "@electron-forge/plugin-webpack": "^6.0.0-beta.64",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/builder-webpack5": "^6.5.9",
-    "@storybook/jest": "^0.0.10",
-    "@storybook/manager-webpack5": "^6.5.9",
-    "@storybook/react": "^6.5.9",
-    "@storybook/testing-library": "^0.0.13",
+    "@chromatic-com/storybook": "3",
+    "@electron-forge/cli": "^7.5.0",
+    "@electron-forge/maker-deb": "^7.5.0",
+    "@electron-forge/maker-rpm": "^7.5.0",
+    "@electron-forge/maker-squirrel": "^7.5.0",
+    "@electron-forge/maker-zip": "^7.5.0",
+    "@electron-forge/plugin-webpack": "^7.5.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "@storybook/addon-actions": "^8.4.5",
+    "@storybook/addon-essentials": "^8.4.5",
+    "@storybook/addon-interactions": "^8.4.5",
+    "@storybook/addon-links": "^8.4.5",
+    "@storybook/addon-mdx-gfm": "8.4.5",
+    "@storybook/addon-styling-webpack": "1.0.1",
+    "@storybook/addon-themes": "^8.4.5",
+    "@storybook/addon-webpack5-compiler-swc": "1.0.5",
+    "@storybook/react": "^8.4.5",
+    "@storybook/react-webpack5": "8.4.5",
+    "@storybook/test": "8.4.5",
+    "@types/binary-file": "^0.2.0",
     "@types/clone-deep": "^4.0.3",
     "@types/fs-extra": "^9.0.13",
     "@types/luaparse": "^0.2.12",
     "@types/nightmare": "^2.10.6",
     "@types/object-hash": "^3.0.2",
+    "@types/object.groupby": "^1.0.4",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/winreg": "^1.2.31",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
-    "@vercel/webpack-asset-relocator-loader": "^1.7.0",
-    "autoprefixer": "^10.4.13",
+    "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^8.2.5",
+    "browserslist": "^4.24.2",
     "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
-    "electron": "19.0.4",
+    "css-loader": "^7.1.2",
+    "electron": "33.2.0",
     "electron-devtools-installer": "^3.2.0",
+    "esbuild-loader": "^4.2.2",
     "eslint": "^8.38.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-storybook": "^0.5.12",
+    "eslint-plugin-storybook": "^0.11.1",
     "fork-ts-checker-webpack-plugin": "^7.2.11",
     "node-loader": "^2.0.0",
-    "postcss": "^8.4.18",
-    "postcss-loader": "^7.0.0",
+    "postcss": "8.4.47",
+    "postcss-loader": "7.0.1 ",
     "random-words": "^1.3.0",
+    "react-refresh": "^0.14.2",
+    "storybook": "8.4.5",
     "style-loader": "^3.3.1",
-    "tailwind-scrollbar": "^2.0.1",
-    "tailwindcss": "^3.2.2",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "3.2.2",
     "ts-loader": "^9.4.1",
-    "typescript": "~4.8.4"
+    "typescript": "^5.7.2",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-sources": "^3.2.3"
   },
   "dependencies": {
     "@ai-zen/steamworks.js": "^0.3.6",
     "@dagrejs/dagre": "^1.1.3",
-    "@floating-ui/react-dom": "^1.0.0",
-    "@floating-ui/react-dom-interactions": "^0.13.3",
+    "@floating-ui/react": "^0.26.28",
+    "@floating-ui/react-dom": "^2.1.2",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -155,10 +167,8 @@
     "@node-steam/vdf": "^2.2.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
-    "@reduxjs/toolkit": "^1.9.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "@silevis/reactgrid": "^4.0.4",
-    "@types/binary-file": "^0.2.0",
-    "@types/object.groupby": "^1.0.4",
     "@xyflow/react": "^12.0.1",
     "binary-file": "^0.2.3",
     "binary-search": "^1.3.6",
@@ -172,19 +182,20 @@
     "electron-extension-installer": "^1.2.0",
     "electron-fetch": "^1.9.1",
     "electron-is-dev": "^2.0.0",
-    "electron-log": "^4.4.8",
+    "electron-log": "^5.2.2",
     "electron-prebuilt-compile": "^8.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-window-state": "^5.0.3",
     "entities": "^4.5.0",
     "fast-deep-equal": "^3.1.3",
     "fast-xml-parser": "^4.2.7",
-    "flowbite": "^1.5.3",
-    "flowbite-react": "^0.3.4",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
     "fs-extra": "^10.1.0",
     "gh-release-fetch": "^3.0.2",
     "glob": "^10.3.12",
     "handsontable": "^12.3.3",
+    "https-browserify": "^1.0.0",
     "i18next": "^23.4.6",
     "i18next-fs-backend": "^2.1.5",
     "iso-639-1": "^3.1.0",
@@ -193,6 +204,7 @@
     "luaparse": "^0.3.1",
     "node-fetch": "^3.3.2",
     "object.groupby": "^1.0.3",
+    "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "ps-list": "^8.1.1",
     "re-resizable": "^6.9.9",
@@ -201,17 +213,22 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-icons": "^5.2.0",
+    "react-indiana-drag-scroll": "^2.2.0",
     "react-joyride": "^2.5.3",
-    "react-redux": "^8.0.5",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.10.0",
     "react-select": "^5.6.0",
     "react-tabs": "^6.0.1",
     "reactflow": "^11.11.4",
-    "semver": "^7.3.8",
+    "semver": "^7.6.3",
+    "stream-http": "^3.2.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "ts-pattern": "^5.2.0",
     "winreg": "^1.2.4"
   },
-  "packageManager": "yarn@1.22.19"
+  "packageManager": "yarn@1.22.19",
+  "engines": {
+    "node": "20.18.0"
+  }
 }
