--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "@types/object.groupby": "^1.0.4",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-virtualized": "^9.22.0",
     "@types/winreg": "^1.2.31",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -219,6 +220,7 @@
     "react-router-dom": "^6.10.0",
     "react-select": "^5.6.0",
     "react-tabs": "^6.0.1",
+    "react-virtualized": "^9.22.5",
     "reactflow": "^11.11.4",
     "semver": "^7.6.3",
     "stream-http": "^3.2.0",
