--- a/package.json
+++ b/package.json
@@ -190,6 +190,7 @@
     "entities": "^4.5.0",
     "fast-deep-equal": "^3.1.3",
     "fast-xml-parser": "^4.2.7",
+    "find-process": "^1.4.10",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.4",
     "fs-extra": "^10.1.0",
@@ -207,7 +208,6 @@
     "object.groupby": "^1.0.3",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "ps-list": "^8.1.1",
     "re-resizable": "^6.9.9",
     "react": "^18.2.0",
     "react-accessible-treeview": "^2.3.4",
