--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "name": "wh3mm",
   "productName": "wh3mm",
-  "version": "2.12.3",
+  "version": "2.13.0",
   "description": "WH3 Mod Manager",
   "main": ".webpack/main",
+  "sideEffects": [
+    "*.css",
+    "*.scss",
+    "src/index.css",
+    "src/renderer.ts",
+    "src/schema.ts",
+    "src/app.tsx",
+    "handsontable/styles/*.css"
+  ],
   "scripts": {
     "start": "tsc ./src/sub.ts ./src/readPacksWorker.ts --skipLibCheck --resolveJsonModule --outDir ./temp && electron-forge start --inspect-electron -- --mode development",
     "package": "electron-forge package",
@@ -11,7 +20,8 @@
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
     "storybook": "echo 'storybook currently broken, storybook dev -p 6006'",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": {
@@ -124,6 +134,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-virtualized": "^9.22.0",
+    "@types/unzipper": "^0.10.11",
     "@types/winreg": "^1.2.31",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -165,6 +176,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@handsontable/react-wrapper": "^15.3.0",
     "@heroicons/react": "^2.0.13",
+    "@mongodb-js/zstd": "^2.0.1",
     "@node-steam/vdf": "^2.2.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -226,6 +238,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "ts-pattern": "^5.2.0",
+    "unzipper": "^0.12.3",
     "winreg": "^1.2.4"
   },
   "packageManager": "yarn@1.22.19",
