--- a/package.json
+++ b/package.json
@@ -174,7 +174,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@handsontable/react-wrapper": "^15.3.0",
+    "@handsontable/react-wrapper": "^16.0.1",
     "@heroicons/react": "^2.0.13",
     "@mongodb-js/zstd": "^2.0.1",
     "@node-steam/vdf": "^2.2.0",
@@ -207,7 +207,7 @@
     "fs-extra": "^10.1.0",
     "gh-release-fetch": "^3.0.2",
     "glob": "^10.3.12",
-    "handsontable": "^15.3.0",
+    "handsontable": "^16.0.1",
     "https-browserify": "^1.0.0",
     "i18next": "^23.4.6",
     "i18next-fs-backend": "^2.1.5",
@@ -241,7 +241,7 @@
     "unzipper": "^0.12.3",
     "winreg": "^1.2.4"
   },
-  "packageManager": "yarn@1.22.19",
+  "packageManager": "yarn@v1.22.22",
   "engines": {
     "node": "20.18.0"
   }
