--- a/package.json
+++ b/package.json
@@ -167,7 +167,6 @@
     "webpack-sources": "^3.2.3"
   },
   "dependencies": {
-    "@ai-zen/steamworks.js": "^0.3.6",
     "@dagrejs/dagre": "^1.1.3",
     "@floating-ui/react": "^0.26.28",
     "@floating-ui/react-dom": "^2.1.2",
@@ -234,6 +233,7 @@
     "react-virtualized": "^9.22.5",
     "reactflow": "^11.11.4",
     "semver": "^7.6.3",
+    "steamworks.js": "^0.4.0",
     "stream-http": "^3.2.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
