--- a/package.json
+++ b/package.json
@@ -232,6 +232,7 @@
     "react-select": "^5.6.0",
     "react-tabs": "^6.0.1",
     "react-virtualized": "^9.22.5",
+    "react-windowed-select": "^5.2.0",
     "reactflow": "^11.11.4",
     "semver": "^7.6.3",
     "stream-http": "^3.2.0",
